Made diskinfo program

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 CC = gcc
 FILE_OFFSET_FLAGS = -D_FILE_OFFSET_BITS=64
 
-all: diskcont
+all: diskcont diskinfo
 
 adt_shared.o: adt_shared.h adt_shared.c
 	$(CC) $(FILE_OFFSET_FLAGS) -Wall -c adt_shared.c
@@ -9,6 +9,10 @@ adt_shared.o: adt_shared.h adt_shared.c
 diskcont: diskcont.c adt_shared.o
 	$(CC) $(FILE_OFFSET_FLAGS) -Wall -o ../bin/diskcont diskcont.c adt_shared.o
 
+diskinfo: diskinfo.c adt_shared.o
+	$(CC) $(FILE_OFFSET_FLAGS) -Wall -o ../bin/diskinfo diskinfo.c adt_shared.o
+
 clean:
 	@rm -f ../bin/diskcont
+	@rm -f ../bin/diskinfo
 	@rm -f *.o
